k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meetup-api
  labels:
    app: meetup-api
    environment: production
