k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meetup-api
  namespace: meetup-api
  labels:
    app: meetup-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: meetup-api
